--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "devDependencies": {
     "grunt": "^1.0.1",
     "grunt-browser-sync": "^2.2.0",
+    "grunt-contrib-imagemin": "^1.0.0",
+    "grunt-responsive-images": "^0.1.7",
     "load-grunt-tasks": "^3.5.0"
   }
 }
